<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="cad_module_name">Custom Alert Dialog</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="go_on">Go On</string>
    <string name="cancel">Cancel</string>

    <!--  Content Descriptions  -->
    <string name="image_button_1">image button 1</string>
    <string name="image_button_2">image button 2</string>
    <string name="image_button_3">image button 3</string>
    <string name="image_button_4">image button 4</string>
    <string name="image_button_5">image button 5</string>

</resources>