<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/_16sdp">

    <!--  Dialog penceresine cornerRadius özelliği vermek için CardView kullanıldı.
          Hazır drawable dosyası kullanılmamasının nedeni
          pencerenin arka plan renginin programatik olmasıdır.  -->
    <androidx.cardview.widget.CardView
        android:id="@+id/crd_custom_alert_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/cad_bg_color"
        app:cardCornerRadius="@dimen/cad_corner_radius"
        app:cardElevation="0dp">

        <LinearLayout
            android:id="@+id/pnl_cad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_cad_icon"
                android:layout_width="@dimen/cad_icon_size"
                android:layout_height="@dimen/cad_icon_size"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:contentDescription="@string/cad_module_name"
                android:visibility="gone" />

            <TextView
                android:id="@+id/txt_cad_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_8sdp"
                android:fontFamily="@font/imprima"
                android:includeFontPadding="false"
                android:padding="@dimen/_16sdp"
                android:textColor="@color/cad_text_color"
                android:textSize="@dimen/cad_text_size" />

            <!--     Panel Text Buttons      -->
            <LinearLayout
                android:id="@+id/pnl_text_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:gravity="end|center_vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/txt_text_negative_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="@font/imprima"
                    android:includeFontPadding="false"
                    android:paddingHorizontal="@dimen/_16sdp"
                    android:paddingVertical="@dimen/_8sdp"
                    android:text="@string/cancel"
                    android:textColor="@color/cad_neutral_color"
                    android:textSize="@dimen/cad_btn_text_size"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/txt_text_positive_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="@font/imprima"
                    android:includeFontPadding="false"
                    android:paddingHorizontal="@dimen/_16sdp"
                    android:paddingVertical="@dimen/_8sdp"
                    android:text="@string/ok"
                    android:textColor="@color/cad_text_color"
                    android:textSize="@dimen/cad_btn_text_size"
                    android:textStyle="bold"
                    android:visibility="gone" />

            </LinearLayout>

            <!--     Panel Image Buttons      -->
            <LinearLayout
                android:id="@+id/pnl_image_buttons"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_48sdp"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/img_btn_5"
                    style="@style/ImageButtonStyle"
                    android:contentDescription="@string/image_button_5" />

                <ImageView
                    android:id="@+id/img_btn_4"
                    style="@style/ImageButtonStyle"
                    android:contentDescription="@string/image_button_4" />

                <ImageView
                    android:id="@+id/img_btn_3"
                    style="@style/ImageButtonStyle"
                    android:contentDescription="@string/image_button_3" />

                <ImageView
                    android:id="@+id/img_btn_2"
                    style="@style/ImageButtonStyle"
                    android:contentDescription="@string/image_button_2" />

                <ImageView
                    android:id="@+id/img_btn_1"
                    style="@style/ImageButtonStyle"
                    android:contentDescription="@string/image_button_1" />

            </LinearLayout>

            <!--     Panel Buttons      -->
            <!-- Butonlara layout_goneMargin özelliğini verebilmek için
                 ConstraintLayout kullanıldı. -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/pnl_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginBottom="@dimen/_16sdp"
                android:visibility="gone">

                <androidx.cardview.widget.CardView
                    android:id="@+id/crd_negative_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_4sdp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?selectableItemBackground"
                    android:visibility="gone"
                    app:cardBackgroundColor="@color/cad_neutral_color"
                    app:cardCornerRadius="@dimen/cad_btn_corner_radius"
                    app:cardElevation="0dp"
                    app:contentPadding="@dimen/_2sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/crd_positive_btn"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_goneMarginEnd="0dp">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/crd_negative_btn_inner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardBackgroundColor="@color/cad_bg_color"
                        app:cardCornerRadius="@dimen/cad_btn_corner_radius"
                        app:cardElevation="0dp">

                        <TextView
                            android:id="@+id/txt_negative_btn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/imprima"
                            android:gravity="center_horizontal"
                            android:includeFontPadding="false"
                            android:padding="@dimen/_8sdp"
                            android:text="@string/cancel"
                            android:textColor="@color/cad_neutral_color"
                            android:textSize="@dimen/cad_btn_text_size"
                            android:textStyle="bold" />

                    </androidx.cardview.widget.CardView>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/crd_positive_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?selectableItemBackground"
                    android:visibility="gone"
                    app:cardBackgroundColor="@color/cad_positive_btn_default_bg_color"
                    app:cardCornerRadius="@dimen/cad_btn_corner_radius"
                    app:cardElevation="0dp"
                    app:contentPadding="@dimen/_2sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/crd_negative_btn"
                    app:layout_goneMarginStart="0dp">

                    <TextView
                        android:id="@+id/txt_positive_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/imprima"
                        android:gravity="center_horizontal"
                        android:includeFontPadding="false"
                        android:padding="@dimen/_8sdp"
                        android:text="@string/ok"
                        android:textColor="@color/cad_text_color"
                        android:textSize="@dimen/cad_btn_text_size"
                        android:textStyle="bold" />

                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <!--     Panel Vertical Buttons      -->
            <LinearLayout
                android:id="@+id/pnl_vertical_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginBottom="@dimen/_16sdp"
                android:orientation="vertical"
                android:visibility="gone">

                <androidx.cardview.widget.CardView
                    android:id="@+id/crd_vertical_negative_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?selectableItemBackground"
                    app:cardBackgroundColor="@color/cad_neutral_color"
                    app:cardCornerRadius="@dimen/cad_btn_corner_radius"
                    app:cardElevation="0dp"
                    app:contentPadding="@dimen/_2sdp">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/crd_vertical_negative_btn_inner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardBackgroundColor="@color/cad_bg_color"
                        app:cardCornerRadius="@dimen/cad_btn_corner_radius"
                        app:cardElevation="0dp">

                        <TextView
                            android:id="@+id/txt_vertical_negative_btn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawablePadding="@dimen/_8sdp"
                            android:fontFamily="@font/imprima"
                            android:gravity="center_horizontal"
                            android:includeFontPadding="false"
                            android:padding="@dimen/_8sdp"
                            android:text="@string/cancel"
                            android:textColor="@color/cad_neutral_color"
                            android:textSize="@dimen/cad_btn_text_size"
                            android:textStyle="bold" />

                    </androidx.cardview.widget.CardView>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/crd_vertical_positive_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?selectableItemBackground"
                    app:cardBackgroundColor="@color/cad_positive_btn_default_bg_color"
                    app:cardCornerRadius="@dimen/cad_btn_corner_radius"
                    app:cardElevation="0dp"
                    app:contentPadding="@dimen/_2sdp">

                    <TextView
                        android:id="@+id/txt_vertical_positive_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/_8sdp"
                        android:fontFamily="@font/imprima"
                        android:gravity="center_horizontal"
                        android:includeFontPadding="false"
                        android:padding="@dimen/_8sdp"
                        android:text="@string/ok"
                        android:textColor="@color/cad_text_color"
                        android:textSize="@dimen/cad_btn_text_size"
                        android:textStyle="bold" />

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</ScrollView>